linux上编辑json出错，提交，用windows编辑

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "port": 80,
-    "api": "webhooks",
-    "sourceDir": ""
+    "api": "/webhooks",
+    "pass": "8612", 
+    "sourceDir": "",
 }
