增加writeLog模块，增减日志写入功能，并修改对应的README

--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
     "port": 9999,
     "api": "/webhooks",
     "pass": "8612", 
-    "sourceDir": "/code/xincheng-supplier"
+    "sourceDir": "/code/xincheng-supplier",
+    "logPath": ""
 }
