完善每个步骤处理成功日志写入

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "port": 9999,
-    "api": "/webhooks",
+    "port": 8101,
+    "api": "/",
     "pass": "8612", 
     "sourceDir": "/code/xincheng-supplier",
     "logPath": ""
